--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -24,5 +24,6 @@ test:
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   owner_email: <%= ENV["OWNER_EMAIL"] %>
+  domain_name: <%= ENV["DOMAIN_NAME"] %>
   email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
   email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
